Fixed wrong padding on textarea causing scroll desync

--- a/SchiavoAnto-Code-Area-style.css
+++ b/SchiavoAnto-Code-Area-style.css
@@ -23,7 +23,7 @@
     left: 0;
     width: 100%;
     height: 100%;
-    padding: 10px;
+    padding: 0;
     margin: 0;
     border: none;
     resize: none;
